# bam-feature-extractor

./: README.md  pyproject.toml
resources/data/: README.txt
resources/reports/: AlignementRatio.txt  PosCounter.txt  PrefixCounter.txt  SequenceExtractor.txt
src/bam_feature_extractor/: runner.py
src/bam_feature_extractor/core/: batch.py  report.py  worker.py
src/bam_feature_extractor/workers/: alignment_ratio.py  generic_metadata.py  pos_counter.py  prefix_counter.py  read_stats.py  region_stats.py  sequence_extractor.py
