[project]
name = "bam-feature-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "flo", email = "florent.legac@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "easy-kit>=0.1.24",
    "numpy>=2.3.1",
    "pysam>=0.23.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
